tests not persisting on purpose application does persist

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=user
 spring.datasource.password=
 spring.datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
 spring.datasource.initialize=true
+
+# persists database
+spring.jpa.hibernate.ddl-auto=update
