--- a/ui/package.json
+++ b/ui/package.json
@@ -24,10 +24,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -44,8 +41,5 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6"
   },
-  "proxy": "http://localhost:8080",
-  "eslintConfig": {
-    "extends": "react-app"
-  }
+  "proxy": "http://localhost:8080"
 }
