--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,13 @@
       <artifactId>commons-math3</artifactId>
       <version>3.6.1</version>
     </dependency>
-    
+
+    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.3.6</version>
+    </dependency>
+
   </dependencies>
 </project>
